k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: backend
        image: pram25/docker_backend
        ports:
        - containerPort: 9090
        livenessProbe:
          httpGet:
            path: /api/getMessage
            port: 9090
        readinessProbe:
          httpGet:
            path: /api/getMessage
            port: 9090
