k8s/forntend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: frontend
        image: pram25/docker_client
        ports:
        - containerPort: 3000
